# bookwyrm-bulk

./: README.md  parse.py  publications.csv  pyproject.toml
